typo fix in image name

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -451,7 +451,7 @@ header {
   padding-top: 40px;
   padding-bottom: 40px;
   font-family: 'Cabin Sketch', 'Helvetica Neue', Helvetica, Arial, serif;
-  background: #e8f2c6 url(../images/header-str-png) 0 0 repeat-x;
+  background: #e8f2c6 url(../images/header-str.png) 0 0 repeat-x;
   border-bottom: solid 1px #336600;
 }
 
