--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -459,7 +459,7 @@ header h1 {
   letter-spacing: -1px;
   font-size: 72px;
   font-weight: normal;
-  color: #fff;
+  color: #336600;
   line-height: 1;
   margin-top: 0;
   margin-bottom: 0.2em;
@@ -468,7 +468,7 @@ header h1 {
 
 header h2 {
   font-size: 26px;
-  color: #fff;
+  color: #336600;
   font-weight: normal;
   line-height: 1.3;
   width: 540px;
