--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 		<ul class="list-inline social-buttons">
                 {% for network in site.social %}
                     <li>
-                    <a href="{{ network.url }}"><i class="fa fa-{{ network.title }}" style="color:green"></i></a>
+                    <a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
                     </li>
                 {% endfor %}
 		</ul>
