--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,14 @@
     {% include head.html %}
     <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     {% include header.html %}
-    {{ content }}
+    <section id="main"  >
+		<div class="container">
+		<div class="row">
+		<div class="col-md-8 text-left">
+    		{{ content }}
+    	</div>
+    	</div>
+    	</div>
     {% include footer.html %}
     </body>
 </html>
