--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,19 @@
     <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
     <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
-
+	<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+	<script type="text/javascript" 
+			src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" 
+			data-dojo-config="usePlainJson: true, isDebug: false">
+	</script>
+	<script type="text/javascript">
+		require(["mojo/signup-forms/Loader"], 
+				function(L) 
+				{ L.start({"baseUrl":"mc.us11.list-manage.com",
+							"uuid":"77721d8b6a722da2e016b4f7e",
+							"lid":"1759ef7da9"}) }
+		)
+	</script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
