--- a/_includes/progress.html
+++ b/_includes/progress.html
@@ -22,7 +22,7 @@
 		
 		<div class="row">
 		 	<div class="col-lg-5 text-right">
-				<p><b>Fundraise $50,000</b> We are currently trying to rais $50,000 
+				<p><b>Fundraise $50,000</b> We are currently trying to raise $50,000 
 				to fund our proof of concept work.  
 			</div>
 			<div class="col-md-2 text-center">
