clarified Alison's ex-officioness

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -52,8 +52,8 @@
 				<hr>
 				<div class="muted">
 					<p><b>Alison Conway, Ph.D.</b></p>
-					<p> Alison is a professor at the City University of New York and holds a 
-				position on the executive committee of the Transportation Research Board 
+					<p> Alison is a professor at the City University of New York and is an ex-officio 
+				member the Executive Committee of the Transportation Research Board 
 				Executive Committee (part of the National Academy of Sciences).
 				</div>
 			</div>
